--- a/examples/rust/mini-adas/BUILD.bazel
+++ b/examples/rust/mini-adas/BUILD.bazel
@@ -26,7 +26,7 @@ rust_library(
     ],
     crate_features = [
         "com_iox2",
-        "signalling_relayed_tcp",
+        "signalling_direct_tcp",
     ],
     crate_name = "mini_adas",
     proc_macro_deps = [
@@ -59,7 +59,7 @@ rust_library(
     crate_features = [
         "com_iox2",
         "recording",
-        "signalling_relayed_tcp",
+        "signalling_direct_tcp",
     ],
     crate_name = "mini_adas",
     proc_macro_deps = [
@@ -87,7 +87,7 @@ rust_binary(
     srcs = [
         "src/bin/adas_primary.rs",
     ],
-    crate_features = ["signalling_relayed_tcp"],
+    crate_features = ["signalling_direct_tcp"],
     visibility = ["//visibility:public"],
     deps = [
         ":libmini_adas_rust",
@@ -104,7 +104,7 @@ rust_binary(
     srcs = [
         "src/bin/adas_secondary.rs",
     ],
-    crate_features = ["signalling_relayed_tcp"],
+    crate_features = ["signalling_direct_tcp"],
     visibility = ["//visibility:public"],
     deps = [
         ":libmini_adas_rust",
@@ -123,7 +123,7 @@ rust_binary(
     ],
     crate_features = [
         "recording",
-        "signalling_relayed_tcp",
+        "signalling_direct_tcp",
     ],
     visibility = ["//visibility:public"],
     deps = [
